[gd_scene load_steps=57 format=2]

[ext_resource path="res://content/monster/tick/sheet.png" type="Texture" id=1]
[ext_resource path="res://content/monster/tick/Tick.gd" type="Script" id=2]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=3]
[ext_resource path="res://content/sounds/monster/Mucker/MuckerDie.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/tick/tick_explode.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_05.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_01.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_03.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_04.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=15]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=16]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_02.wav" type="AudioStream" id=17]

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 204, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 238, 0, 34, 22 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 34, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 68, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 102, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 136, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 170, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 204, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 238, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 272, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 306, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 340, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 374, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 408, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 442, 44, 34, 22 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 0, 22, 34, 22 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 34, 22, 34, 22 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 68, 22, 34, 22 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 102, 22, 34, 22 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 136, 22, 34, 22 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 170, 22, 34, 22 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 204, 22, 34, 22 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 0, 88, 34, 22 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 34, 88, 34, 22 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 68, 88, 34, 22 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 102, 88, 34, 22 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 136, 88, 34, 22 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 180, 88, 36, 22 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 0, 66, 34, 22 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 34, 66, 34, 22 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "explode",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "jump",
"speed": 6.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 69 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=68]
radius = 4.5

[node name="Tick" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 2 )
techId = "tick"

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
position = Vector2( -5, -7 )
frames = SubResource( 31 )
animation = "jump"

[node name="HitboxDefault" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 68 )

[node name="DieSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 4 )
volume_db = -16.164
pitch_scale = 1.06
bus = "World"
randomVolume = 1.0
randomPitch = 0.2
removeAfterPlaying = true

[node name="DieSound2" parent="DieSound" instance=ExtResource( 7 )]
volume_db = 1.136
pitch_scale = 1.25
bus = "World"
randomVolume = 1.1
randomPitch = 0.2
streams = [ ExtResource( 9 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 8 ) ]
removeAfterPlaying = true

[node name="DieSoundExplode" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 5 )
volume_db = 3.137
bus = "World"
randomPitch = 0.2

[node name="JumpSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = -2.412
pitch_scale = 1.3
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ) ]

[node name="StunSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = 1.958
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ) ]

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
